--- a/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
+++ b/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
@@ -65,6 +65,7 @@
                Grid.RowSpan="3" 
                TextColor="#636363"
                IsEnabled = "false"
+               BackgroundColor="White"
                Grid.Column="3"/>
         </Grid>
 
