--- a/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
+++ b/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
@@ -25,7 +25,7 @@
                  Grid.RowSpan="3" 
                  BackgroundColor="{Binding Status}" />
             <!-- Label Date-->
-            <Label Text="{Binding FormattedDate}" 
+            <Label Text="{Binding Date.FormattedDate}" 
                 FontSize="16" 
                 TextColor="#2C92FD" 
                 Grid.Row="0" 
@@ -44,7 +44,7 @@
                 Grid.Row="0" 
                   Grid.Column="2"/>
             <!-- Label Hour-->
-            <Label Text="{Binding FormattedHour}" 
+            <Label Text="{Binding Hour.FormattedDate}" 
                 Grid.Row="2" 
                 TextColor="#2C92FD" 
                 FontSize="16" 
