--- a/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
+++ b/Xamarin.Forms.ScheduleListView/Controls/ScheduleViewCell.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Xamarin.Forms.ScheduleListView"
@@ -60,7 +60,7 @@
             <Editor 
                Text="{Binding Description}"
                FontSize="12" 
-               Margin="0,-15,0,4" 
+               Margin="0,-12,0,4" 
                Grid.Row="1" 
                Grid.RowSpan="3" 
                TextColor="#636363"
